@@ -140,6 +140,10 @@ void conn_close(conn_t c, char *condition, char *err)
     {
 	char* footer;
 
+	/* is it a connection socket? */
+	if (c->fd < c->c2s->min_client_fd)
+	    log_write(c->c2s->log, LOG_ERR, "Internal Error: we seem to close a wrong fd in conn_close()! (fd=%i)", c->fd);
+
 	/* send the stream error */
 	conn_error(c, condition, err);
 
@@ -288,6 +292,10 @@ int conn_read(conn_t c, char *buf, int len)
     /* client gone */
     if(len == 0)
     {
+	/* is it a connection socket? */
+	if (c->fd < c->c2s->min_client_fd)
+	    log_write(c->c2s->log, LOG_ERR, "Internal Error: we seem to close a wrong fd in conn_read(), len == 0! (fd=%i)", c->fd);
+
         mio_close(c->c2s->mio, c->fd);
         return 0;
     }
@@ -299,6 +307,11 @@ int conn_read(conn_t c, char *buf, int len)
 
         if(errno == EWOULDBLOCK || errno == EINTR || errno == EAGAIN)
             return 2; /* flag that we're blocking now */
+	
+	/* is it a connection socket? */
+	if (c->fd < c->c2s->min_client_fd)
+	    log_write(c->c2s->log, LOG_ERR, "Internal Error: we seem to close a wrong fd in conn_read(), len < 0! (fd=%i)", c->fd);
+
         mio_close(c->c2s->mio, c->fd);
         return 0;
     }
@@ -342,6 +355,10 @@ int conn_read(conn_t c, char *buf, int len)
         /* oh darn */
         if((err != NULL) && (c->flash_hack == 0))
         {
+	    /* is it a connection socket? */
+	    if (c->fd < c->c2s->min_client_fd)
+		log_write(c->c2s->log, LOG_ERR, "Internal Error: we seem to close a wrong fd in conn_read() at processing XML! (fd=%i)", c->fd);
+
             conn_close(c, STREAM_ERR_INVALID_XML, err);
             return 0;
         }
@@ -356,6 +373,11 @@ int conn_read(conn_t c, char *buf, int len)
             snprintf(footer, footersz+1, "</%s>", c->root_name);
             _write_actual(c, c->fd, footer, footersz);
             free(footer);
+
+	    /* is it a connection socket? */
+	    if (c->fd < c->c2s->min_client_fd)
+		log_write(c->c2s->log, LOG_ERR, "Internal Error: we seem to close a wrong fd in conn_read() at end of stream! (fd=%i)", c->fd);
+
             mio_close(c->c2s->mio, c->fd);
             return 0;
         }
@@ -387,6 +409,11 @@ int conn_write(conn_t c)
         {
             if(errno == EWOULDBLOCK || errno == EINTR || errno == EAGAIN)
                 return 2; /* flag that we're blocking now */
+	    
+	    /* is it a connection socket? */
+	    if (c->fd < c->c2s->min_client_fd)
+		log_write(c->c2s->log, LOG_ERR, "Internal Error: we seem to close a wrong fd in conn_write() with len<0! (fd=%i)", c->fd);
+
             mio_close(c->c2s->mio, c->fd);
             return 0;
         }
